tests/paczka1/small_fuzzy/84562328.err
Error in line 2: f8XxB4utxM1 S832 -3,8
Error in line 6: IuayZJYUXc A255 26,50
Error in line 4: IuayZJYUXc A63 81,8
Error in line 12: 5Zsw0CbtcV S899 13,04
Error in line 11: 1HXsuWM8 S832 22,3
Error in line 10: 5Zsw0CbtcV A255 54,7
Error in line 14: 5Zsw0CbtcV S832 42,7
